# OOPS

./: .gitignore  CMakeLists.txt  main.cpp
p1/: Praktika1.cpp  Praktika1.h
p10/: Praktika10.cpp  Praktika10.h
p11/: Praktika11.cpp  Praktika11.h
p12/: Praktika12.cpp  Praktika12.h
p13/: Praktika13.cpp  Praktika13.h
p14/: Praktika14.cpp  Praktika14.h
p15/: Praktika15.cpp  Praktika15.h  Vagon.cpp  Vagon.h
p16/: Praktika16.cpp  Praktika16.h
p17/: Praktika17.cpp  Praktika17.h
p18/: Circle.h  Praktika18.cpp  Praktika18.h
p2/: Praktika2.cpp  Praktika2.h
p3/: Praktika3.cpp  Praktika3.h
p4/: Praktika4.cpp  Praktika4.h
p5/: Praktika5.cpp  Praktika5.h
p6/: Praktika6.cpp  Praktika6.h
p7/: Praktika7.cpp  Praktika7.h
p8/: Praktika8.cpp  Praktika8.h
p9/: Praktika9.cpp  Praktika9.h
utils/: ArrayUtils.cpp  ArrayUtils.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  TemplateCollection.cpp  TemplateCollection.h
