cmake_minimum_required(VERSION 3.23)
project(OOPS)

set(CMAKE_CXX_STANDARD 23)

add_executable(OOPS main.cpp p1/Praktika1.cpp p1/Praktika1.h utils/ArrayUtils.cpp utils/ArrayUtils.h p2/Praktika2.cpp p2/Praktika2.h p3/Praktika3.cpp p3/Praktika3.h p4/Praktika4.cpp p4/Praktika4.h p5/Praktika5.cpp p5/Praktika5.h p6/Praktika6.cpp p6/Praktika6.h p7/Praktika7.cpp p7/Praktika7.h)
