cmake_minimum_required(VERSION 3.23)
project(OOPS)

set(CMAKE_CXX_STANDARD 23)

add_executable(OOPS main.cpp p1/Praktika1.cpp p1/Praktika1.h utils/ArrayUtils.cpp utils/ArrayUtils.h p2/Praktika2.cpp p2/Praktika2.h p3/Praktika3.cpp p3/Praktika3.h p4/Praktika4.cpp p4/Praktika4.h p5/Praktika5.cpp p5/Praktika5.h p6/Praktika6.cpp p6/Praktika6.h p7/Praktika7.cpp p7/Praktika7.h p8/Praktika8.cpp p8/Praktika8.h p9/Praktika9.cpp p9/Praktika9.h p10/Praktika10.cpp p10/Praktika10.h p11/Praktika11.cpp p11/Praktika11.h p12/Praktika12.cpp p12/Praktika12.h p13/Praktika13.cpp p13/Praktika13.h p14/Praktika14.cpp p14/Praktika14.h p15/Praktika15.cpp p15/Praktika15.h p16/Praktika16.cpp p16/Praktika16.h p17/Praktika17.cpp p17/Praktika17.h p18/Praktika18.cpp p18/Praktika18.h)
